-bug#0001564: Escape Community string for Linux command line 
-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
-bug#0001580: Extra newline in api_automation_tools.php breaks custom scripts
-bug#0001583: Crash on Large Deployments -> ini_set used to overwrite global php-config locally
-bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems
-bug#0001600: Default action on lists should be "None"
-bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
-bug#0001609: Script server timeout too aggressive with 10 second poller interval
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
-bug: Remove call pass by reference from function declarations
-bug: When creating new graphs without a data source, print error to user instead of throwing php error
-bug: Browser query string does not contain arguments
-bug: inject_form_variables does not operate if more than 1 variable needs replacing
-documentation: Remove sgml documentation.  See http://docs.cacti.net for Documentation
-documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
-documentation: Documentation of specific rrdtool feature
-documentation: Use of SNMP exec option up to net-snmp 5.3
-feature#0000475: Add RRDTool options currently not settable within Cacti
-feature#0000726: add VDEF support
-feature#0000967: Option to force users to use SSL
-feature#0000954: implement --alt-y-grid graph option
-feature#0001009: XML Syntax enhancements (as a dup of 1225 only)
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates