@@ -49,9 +49,11 @@ Cacti CHANGELOG
 -bug#0001580: Extra newline in api_automation_tools.php breaks custom scripts
 -bug#0001583: Crash on Large Deployments -> ini_set used to overwrite global php-config locally
 -bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems
+-bug#0001595: double-hyphenated strings in polled OID values cause truncation of last hyphen and subsequent data when populating variables 
 -bug#0001600: Default action on lists should be "None"
 -bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
 -bug#0001609: Script server timeout too aggressive with 10 second poller interval
+-bug#0001623: SQL JOIN on user_log without INDEX (performance issue)
 -bug: remove graph permissions if graph is removed
 -bug: remove host permissions if host is removed
 -bug: add_tree.php did not allow nodes with propagating sort options
